--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </tr>
         <tr>
             <center>
-                <video src="video1.mp4" muted loop autoplay width="400"></video>
+                <video src="videos/video1.mp4" muted loop autoplay width="400"></video>
 
             </center>
         </tr>
@@ -81,7 +81,7 @@
 
 
             </td>
-            <td><img src="Screenshot 2024-10-03 120910.png" width="400" alt=""></td>
+            <td><img src="img/Screenshot 2024-10-03 120910.png" width="400" alt=""></td>
 
 
         </tr>
@@ -90,7 +90,7 @@
             <td colspan="4">
                 <center>
                     <h3>Baker's Waterfall</h3>
-                    <img src="pexels-chiecharon-722629.jpg" width="1000" height="500">
+                    <img src="img/pexels-chiecharon-722629.jpg" width="1000" height="500">
             </td>
             </center>
 
@@ -212,7 +212,7 @@
         <tr>
             <td colspan="5">
                 <center>
-                    <img src="pexels-raybilcliff-1526246.jpg" width="500" alt="">
+                    <img src="img/pexels-raybilcliff-1526246.jpg" width="500" alt="">
                 </center>
             </td>
         </tr>
